# grammar

./: .cspell.json  .cspell.jsonc  .editorconfig  .gitattributes  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  CMakeLists.txt  cesium.code-workspace  cesium.tmGrammar.json  grammar.code-workspace  package-lock.json  package.json  readme.md  tsconfig.json
.cspell/cesium/: cesium.txt  cspell-ext.json
.foam/templates/: daily-note.md  new-note.md
.github/workflows/: deploy.yml  test.yml
docs/: custom-syntax-highlighting.ts  quartz  quartz.config.ts  quartz.layout.ts
docs/src/: index.md
docs/src/news/: 2025-09-12.md  index.md
docs/src/reference/: builtin-functions.md  control-flow.md  error-handling.md  functions.md  index.md  lexical-structure.md  memory-management.md  modules-imports.md  object-oriented.md  operators-expressions.md  overview.md  type-system.md  variables-constants.md
github-linguist/: languages.yml
public_grammars/: cesium.tmGrammar.json
public_grammars/github/linguist/: languages.yml
src/: main.cpp
tests/: catch_blocks.cs  czm_test.czm  debug.cs  error_syntax.cs  error_types.cs  identifiers.cs  keywords.cs  numbers.cs  simple.cs  standard_errors.cs  strings.cs
